321 fixing notice alignment

--- a/atf_eregs/static/regulations/css/less/module/universal-landing.less
+++ b/atf_eregs/static/regulations/css/less/module/universal-landing.less
@@ -139,7 +139,7 @@
 
     .mini-alert {
         display: block;
-        margin-left: 100px;
+        margin-left: 6.5em;
         margin-bottom: 0.5em;
         padding: 0.5em 15px 0 0;
         .border-top-light;
